<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/addition_banknote_preview"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="20dp"
        android:padding="10dp"
        android:layout_gravity="center"
        android:background="@color/red_black"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:fontFamily="sans-serif"
        android:text="@string/addition_country_of_origin"
        android:textSize="20sp" />

    <Spinner
        android:id="@+id/addition_country_selection"
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:layout_gravity="left"
        android:layout_marginBottom="10dp"
        android:layout_marginEnd="20dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="5dp"
        android:background="@android:color/white"
        android:fontFamily="sans-serif" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:text="@string/addition_local_value"
        android:textSize="20sp" />

    <com.shawnlin.numberpicker.NumberPicker
        android:id="@+id/number_picker"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:np_orientation="horizontal"
        app:np_width="350dp"
        app:np_height="90dp"
        app:np_dividerColor="@color/colorPrimary"
        app:np_dividerDistance="60dp"
        app:np_max="1000"
        app:np_min="0"
        app:np_selectedTextColor="@color/colorPrimary"
        app:np_textColor="@color/colorAccent"
        app:np_value="10"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"/>

    <Button
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="40dp"
        android:background="@color/colorPrimary"
        android:textColor="@android:color/white"
        android:text="@string/add_to_database"/>
</LinearLayout>